fix(diary): MCDT-368 fix align for students and teachers

--- a/src/main/resources/public/sass/global/components/_administrator-page.scss
+++ b/src/main/resources/public/sass/global/components/_administrator-page.scss
@@ -12,11 +12,10 @@
 
   .title-area-complete {
     display: flex;
-    height: 60px;
     align-items: center;
 
     img {
-      max-height: 60px;
+      max-height: 56px;
       margin-right: 10px;
     }
 
