--- a/src/main/resources/public/sass/global/components/_main.scss
+++ b/src/main/resources/public/sass/global/components/_main.scss
@@ -117,11 +117,10 @@ h1 {
 
 .title-area-complete {
   display: flex;
-  height: 60px;
   align-items: center;
 
   img {
-    max-height: 60px;
+    max-height: 56px;
     margin-right: 10px;
   }
 
